objects/Contract__c.object
<CustomObject>
    <description>&lt;CON&gt; - Represents a contract signed with a retailer. Either lease, Commercial lease, license agreement</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Account)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActualVacateDate__c</fullName>
        <inlineHelpText>Date when the tenant vacated the shop.</inlineHelpText>
        <label>Actual Vacate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AmountToBeRefunded__c</fullName>
        <label>Amount to be Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutoInspectionReportCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field get updated when 9 month expiry inspection report is created.</description>
        <label>Auto Inspection Report Created ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSBNumber__c</fullName>
        <label>BSB Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankGuaranteeAmount__c</fullName>
        <label>Bank Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BreakAmount__c</fullName>
        <label>Break Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BreakType__c</fullName>
        <label>Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BreakType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Account__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Retailer grouping based on usage and product/service offering.</inlineHelpText>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAdditionalOperatingExpensePSM__c</fullName>
        <formula>IF( ISNULL(CurrentAdditionalOperatingExpenses__c) , 0.00, CurrentAdditionalOperatingExpenses__c /  LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Additional Operating Expense PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentAdditionalOperatingExpenses__c</fullName>
        <label>Current Additional Operating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAirConPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentAirCon__c ), ISBLANK(CurrentAirCon__c) ) , 0.00, CurrentAirCon__c  /  LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Air Con PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentAirCon__c</fullName>
        <label>Current Air Con</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentCafeCourtExpensesPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentCafeCourtExpenses__c), ISBLANK(CurrentCafeCourtExpenses__c) ) , 0.00, CurrentCafeCourtExpenses__c/ LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Cafe Court Expenses PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentCafeCourtExpenses__c</fullName>
        <label>Current Cafe Court Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentContribution__c</fullName>
        <label>Current Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentCouncilRatePSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentCouncilRate__c ), ISBLANK(CurrentCouncilRate__c ) ) , 0.00, CurrentCouncilRate__c  / LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Council Rate PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentCouncilRate__c</fullName>
        <label>Current Council Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentEmergencyLevy__c</fullName>
        <label>Current Emergency Levy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFoodCourtExpensesPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentFoodCourtExpenses__c  ), ISBLANK(CurrentFoodCourtExpenses__c  ) ) , 0.00, CurrentFoodCourtExpenses__c   / LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Food Court Expenses PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentFoodCourtExpenses__c</fullName>
        <label>Current Food Court Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentLandTaxPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentLandTax__c ), ISBLANK(CurrentLandTax__c  ) ) , 0.00, CurrentLandTax__c  / LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Land Tax PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentLandTax__c</fullName>
        <label>Current Land Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentLeaseOccupancyCostPercentage__c</fullName>
        <formula>if(AND(( CurrentRent__c + CurrentTotalRecoveries__c + CurrentPromoAmount__c + PercentageRentPaid__c )&gt;0,MATSales__c&gt;0),
( CurrentRent__c + CurrentTotalRecoveries__c + CurrentPromoAmount__c+PercentageRentPaid__c )/ MATSales__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Occupancy Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentOutgoingsPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentOutgoings__c), ISBLANK(CurrentOutgoings__c  ) ) , 0.00, CurrentOutgoings__c  / LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Outgoings PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentOutgoings__c</fullName>
        <label>Current Outgoings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentPromoAmount__c</fullName>
        <label>Current Promo Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentRatesAndTaxesPSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentRatesAndTaxes__c ), ISBLANK(CurrentRatesAndTaxes__c   ) ) , 0.00, CurrentRatesAndTaxes__c   / LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Rates &amp; Taxes PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentRatesAndTaxes__c</fullName>
        <label>Current Rates &amp; Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentRent__c</fullName>
        <label>Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentSundayTradePSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentSundayTrade__c ), ISBLANK(CurrentSundayTrade__c ) ) , 0.00, CurrentSundayTrade__c/ LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Sunday Trade PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentSundayTrade__c</fullName>
        <label>Current Sunday Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentTotalGrossRentPSM__c</fullName>
        <formula>If ((CurrentRent__c + CurrentTotalRecoveries__c + CurrentPromoAmount__c + PercentageRentPaid__c)&gt;0,
(CurrentRent__c + CurrentTotalRecoveries__c + CurrentPromoAmount__c + PercentageRentPaid__c)/ Space__r.RentableArea__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total Gross Rent PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentTotalGrossRent__c</fullName>
        <formula>(CurrentRent__c + CurrentTotalRecoveries__c + CurrentPromoAmount__c + PercentageRentPaid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentTotalRecoveries__c</fullName>
        <formula>CurrentOutgoings__c + CurrentAirCon__c + CurrentCouncilRate__c + CurrentWaterRate__c + CurrentLandTax__c  +   CurrentSundayTrade__c + CurrentAdditionalOperatingExpenses__c + CurrentCafeCourtExpenses__c + CurrentFoodCourtExpenses__c+ CurrentEmergencyLevy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total Recoveries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentTurnover__c</fullName>
        <label>Current Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentWaterRatePSM__c</fullName>
        <formula>IF( OR(ISNULL(CurrentWaterRate__c ), ISBLANK(CurrentWaterRate__c ) ) , 0.00, CurrentWaterRate__c/ LeasableArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Water Rate PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentWaterRate__c</fullName>
        <label>Current Water Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedPaymentDate__c</fullName>
        <label>Expected Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FitoutContributionAmount__c</fullName>
        <formula>Opportunity__r.TotalFitoutContribution__c</formula>
        <label>Fitout Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossCurrentRent__c</fullName>
        <label>Gross Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceDescription__c</fullName>
        <label>Invoice Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDELeaseNumber__c</fullName>
        <description>Neel 03042018: Added</description>
        <externalId>true</externalId>
        <label>JDE Lease Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPaymentDate__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeasableArea__c</fullName>
        <label>Leasable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeaseEndDate__c</fullName>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseStartDate__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseStatus__c</fullName>
        <label>Lease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Assigned - Holdover</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Assigned - after Renewal</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>Future - D&amp;C</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Future Lease</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Holdover</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Extension of lease term</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Lockout</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Marketing Fund</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>New Merchant (Current)</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>New Merchant (Cur) - Holdover</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>New Lease (Renewal)</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>New Lease (Renewal) - Holdover</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaseType__c</fullName>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OB</fullName>
                    <label>Advertiser</label>
                </value>
                <value>
                    <fullName>AP</fullName>
                    <label>Apartment</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>AREF Speculative Lease</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Brand Alliance</label>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <label>Cinemas Intencity Video Games</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Commercial Office</label>
                </value>
                <value>
                    <fullName>DB</fullName>
                    <label>Digital Business</label>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <label>Industrial</label>
                </value>
                <value>
                    <fullName>LL</fullName>
                    <label>Land Lease</label>
                </value>
                <value>
                    <fullName>MJ</fullName>
                    <label>Major</label>
                </value>
                <value>
                    <fullName>MF</fullName>
                    <label>Marketing Fund</label>
                </value>
                <value>
                    <fullName>MM</fullName>
                    <label>Mini-Major</label>
                </value>
                <value>
                    <fullName>NR</fullName>
                    <label>Non-Retail</label>
                </value>
                <value>
                    <fullName>OF</fullName>
                    <label>Office</label>
                </value>
                <value>
                    <fullName>OL</fullName>
                    <label>On-Line</label>
                </value>
                <value>
                    <fullName>OA</fullName>
                    <label>Operating Agreement</label>
                </value>
                <value>
                    <fullName>RS</fullName>
                    <label>Restaurant</label>
                </value>
                <value>
                    <fullName>RT</fullName>
                    <label>Retail - Specialty</label>
                </value>
                <value>
                    <fullName>SR</fullName>
                    <label>Storeroom licence</label>
                </value>
                <value>
                    <fullName>SB</fullName>
                    <label>Sub Lease</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>Sundry Debtor</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Sundry Property</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                    <label>Sundry Property - other</label>
                </value>
                <value>
                    <fullName>TW</fullName>
                    <label>Tenancy Works</label>
                </value>
                <value>
                    <fullName>TS</fullName>
                    <label>Trade Show Booth</label>
                </value>
                <value>
                    <fullName>VS</fullName>
                    <label>Vacant Shop Casual Lease</label>
                </value>
                <value>
                    <fullName>WH</fullName>
                    <label>Warehouse / Storage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LesseeName__c</fullName>
        <formula>Account__r.LesseeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lessee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LessorIntentiontoRenew__c</fullName>
        <label>Lessor Intention to Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Vacate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MATSalesPSM__c</fullName>
        <formula>if( MATSales__c &gt;0,
MATSales__c / Space__r.RentableArea__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAT Sales PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATSales__c</fullName>
        <label>MAT Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATVar__c</fullName>
        <label>MAT $ % Var</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutgoingsLeaseType__c</fullName>
        <label>Outgoings Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NT</fullName>
                    <label>Net</label>
                </value>
                <value>
                    <fullName>GR</fullName>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>S1</fullName>
                    <label>Semi Gross</label>
                </value>
                <value>
                    <fullName>ER</fullName>
                    <label>Invalid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutstandingAmount30Day__c</fullName>
        <label>Outstanding Amount (30 Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OutstandingAmount60Day__c</fullName>
        <label>Outstanding Amount (60 Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OutstandingAmount90Day__c</fullName>
        <label>Outstanding Amount (90 Day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverdueAmount__c</fullName>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <formula>CASESAFEID(Account__r.Parent.Id)</formula>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PercentageRentPaid__c</fullName>
        <label>Percentage Rent Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PercentageRentPercent__c</fullName>
        <label>Percentage Rent %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RentCommencementDate__c</fullName>
        <label>Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RightTenantRightLocation__c</fullName>
        <label>Right Tenant Right Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RTRL</fullName>
                </value>
                <value>
                    <fullName>RTWL</fullName>
                </value>
                <value>
                    <fullName>WTRL</fullName>
                </value>
                <value>
                    <fullName>WTWL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecurityAmount__c</fullName>
        <label>Security Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SemiGrossCurrentRent__c</fullName>
        <label>Semi Gross Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduced ROLO</fullName>
                </value>
                <value>
                    <fullName>No ROLO</fullName>
                </value>
                <value>
                    <fullName>Over payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuperfineCategory__c</fullName>
        <formula>TEXT( Account__r.SuperfineCategory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Refined Retailer grouping based on usage and product/service offering - maintained by Research &amp; Insights and Business Admin.</inlineHelpText>
        <label>Superfine Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_OpportunityRecordTypeId__c</fullName>
        <formula>Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_OpportunityRecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechLeaseEndDate__c</fullName>
        <formula>TEXT(LeaseEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_LeaseEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechLeaseStartDate__c</fullName>
        <formula>TEXT(LeaseStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_LeaseStartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechSpaceType__c</fullName>
        <formula>CASE(TEXT(Space__r.Type__c),
  &quot;1&quot;, &quot;Shop&quot;,
  &quot;2&quot;, &quot;Kiosk&quot;,
  &quot;3&quot;, &quot;Office Suite&quot;,
  &quot;4&quot;, &quot;Store Room&quot;,
  &quot;5&quot;, &quot;Seating&quot;,
  &quot;6&quot;, &quot;Online&quot;,
  &quot;7&quot;, &quot;Sundry Property&quot;,
  &quot;8&quot;, &quot;Garage / Parking&quot;,
  &quot;9&quot;, &quot;Sundry&quot;,
  &quot;20&quot;, &quot;Space Bank&quot;,
  &quot;21&quot;, &quot;Common Mall&quot;,
  &quot;22&quot;, &quot;Re-design&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_SpaceType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechStatusChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_StatusChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_ActualVacateModifiedDate__c</fullName>
        <label>Tech_ActualVacateModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_PrimaryContact__c</fullName>
        <formula>Opportunity__r.PrimaryContact__r.FirstName +&apos; &apos;+ Opportunity__r.PrimaryContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_PrimaryContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>License Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsageClauseDetails__c</fullName>
        <label>Usage Clause Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UsageClauseName__c</fullName>
        <label>Usage Clause Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VirtualVacancy__c</fullName>
        <label>Virtual Vacancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VirtualVacancy</valueSetName>
        </valueSet>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>AllActiveContracts</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Space__c</columns>
        <columns>Account__c</columns>
        <columns>LeaseType__c</columns>
        <columns>SubType__c</columns>
        <columns>Type__c</columns>
        <columns>LeaseStartDate__c</columns>
        <columns>LeaseEndDate__c</columns>
        <columns>LeaseStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeaseStatus__c</field>
            <operation>notEqual</operation>
            <value>E</value>
        </filters>
        <label>All Active Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Contract_DEBT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>LeaseStartDate__c</columns>
        <columns>LeaseEndDate__c</columns>
        <columns>TechDMXREFId__c</columns>
        <columns>OutstandingAmount30Day__c</columns>
        <columns>OutstandingAmount60Day__c</columns>
        <columns>OutstandingAmount90Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeaseStartDate__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>OutstandingAmount30Day__c</field>
            <operation>greaterThan</operation>
            <value>AUD 1</value>
        </filters>
        <label>All Contract (DEBT)</label>
    </listViews>
    <listViews>
        <fullName>All_Contract_MAT</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>LeaseStartDate__c</columns>
        <columns>LeaseEndDate__c</columns>
        <columns>TechDMXREFId__c</columns>
        <columns>MATSales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeaseStartDate__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>MATSales__c</field>
            <operation>notEqual</operation>
            <value>AUD 0</value>
        </filters>
        <label>All Contract (MAT)</label>
    </listViews>
    <listViews>
        <fullName>UpcomingCommercialLeaseExpiries</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Space__c</columns>
        <columns>Property__c</columns>
        <columns>LeasableArea__c</columns>
        <columns>LeaseEndDate__c</columns>
        <columns>CurrentRent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeaseEndDate__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_MONTHS:12</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.CON_RetailContract</value>
        </filters>
        <label>Upcoming Commercial Lease Expiries</label>
    </listViews>
</CustomObject>